--- a/package.json
+++ b/package.json
@@ -1,18 +1,31 @@
 {
-  "name": "webpack-configs",
-  "version": "0.1.0",
-  "description": "Various slightly opinionated shared webpack configurations",
-  "main": "index.js",
-  "license": "MIT",
-	"engines": {
-		"node": ">=6"
-	},
-  "repository": "https://github.com/panjiesw/webpack-configs.git",
-  "author": "Panjie Setiawan Wicaksono <panjie@panjiesw.com>",
-  "devDependencies": {
-    "webpack": "^2.2.1"
-  },
-  "dependencies": {
-    "webpack-merge": "^2.6.1"
-  }
+ "name": "webpack-configs",
+ "version": "0.1.0",
+ "description": "Various slightly opinionated shared webpack configurations",
+ "main": "index.js",
+ "license": "MIT",
+ "files": [
+  "index.js",
+  "configs"
+ ],
+ "engines": {
+  "node": ">=6"
+ },
+ "repository": "https://github.com/panjiesw/webpack-configs.git",
+ "author": "Panjie Setiawan Wicaksono <panjie@panjiesw.com>",
+ "devDependencies": {
+  "extract-text-webpack-plugin": "^2.0.0-rc.3",
+  "tap-spec": "^4.1.1",
+  "tape": "^4.6.3",
+  "webpack": "^2.2.1"
+ },
+ "dependencies": {
+  "webpack-merge": "^2.6.1"
+ },
+ "peerDependencies": {
+  "webpack": ">=2.2.0"
+ },
+ "optionalDependencies": {
+  "extract-text-webpack-plugin": "^2.0.0-rc.3"
+ }
 }
