--- a/package.json
+++ b/package.json
@@ -13,10 +13,17 @@
  },
  "repository": "https://github.com/panjiesw/webpack-configs.git",
  "author": "Panjie Setiawan Wicaksono <panjie@panjiesw.com>",
+ "scripts": {
+  "test": "tape 'test/**/*.spec.js' | tap-spec",
+  "watch": "tape-watch 'test/**/*.spec.js' | tap-spec"
+ },
  "devDependencies": {
+  "awesome-typescript-loader": "^3.0.4-rc.0",
   "extract-text-webpack-plugin": "^2.0.0-rc.3",
   "tap-spec": "^4.1.1",
   "tape": "^4.6.3",
+  "tape-watch": "^2.2.4",
+  "typescript": "^2.1.6",
   "webpack": "^2.2.1"
  },
  "dependencies": {
