--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  "name": "webpack-configs",
- "version": "0.1.3",
+ "version": "0.2.0",
  "description": "Various slightly opinionated shared webpack configurations",
  "main": "index.js",
  "license": "MIT",
@@ -34,8 +34,8 @@
   "watch": "tape-watch 'test/**/*.spec.js' | tap-spec"
  },
  "devDependencies": {
-  "awesome-typescript-loader": "^3.0.4-rc.0",
-  "extract-text-webpack-plugin": "^2.0.0-rc.3",
+  "awesome-typescript-loader": "^3.1.2",
+  "extract-text-webpack-plugin": "^2.1.0",
   "tap-spec": "^4.1.1",
   "tape": "^4.6.3",
   "tape-watch": "^2.2.4",
